feat: http layer and refine on store module
